Windows QPA: Fix flicker when moving Windows with High DPI scaling

Change 8d7826442bf889364ab39cf54c6f4617891d0bd7 did not take High DPI
scaling into account when checking for plain moves. Rewrite the code
using native window geometry to avoid rounding errors as suggested in
the report.

Fixes: QTBUG-132285
Task-number: QTBUG-115992
Change-Id: Iae751f46b1e398bfce7f8a37e4c10b31e258247a
Reviewed-by: Oliver Wolff <oliver.wolff@qt.io>
(cherry picked from commit f9795bf4ee9fe1d451c56305c9ef0c6a0c2889df)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>